Modify readme so that it is contextually correct when viewed before extracting.

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Fairly straight forward. Now that you've extracted it, start coding!
+Fairly straight forward. Extract it to where you want it and start coding!
 
 More info can be found at: http://europaphp.org/doc/.
