--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Fairly straight forward. Extract it to where you want it and start coding!
 
-More info can be found at: http://europaphp.org/doc/.
+More info: http://europaphp.org/documentation
