--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,14 +1,12 @@
 == 1.1.0 ==
 
-1. Completely re-work architecture to use extending over configuration and to use dependency injection where necessary.
+1. Completely re-work architecture. Europa can now be configured - where necessary - by passing arguments, an array of options or by extending and overriding certain methods instead of using Europa_Base as in 1.0.2.
 
 2. Add Europa_Route class which controls route matching and parameter parsing and retrieving.
 
 3. Add Europa_String class for fluid string manipulation. It's also an integral part of the core for enforcing naming conventions.
 
-4. Change the name of the Europa_Controller class to something a bit more fitting: Europa_Dispatcher.
-
-5. Add Europa_Controller_Abstract class for using as a parent class for controllers. It isn't required, but it sets up properties and methods for common tasks.
+4. Add Europa_Controller_Abstract class for using as a parent class for controllers. It isn't required, but it sets up properties and methods for common tasks.
 
 
 
