--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 Fairly straight forward. Extract it to where you want it and start coding!
 
+Includes build scripts to build out your own install.
+
 More info: http://europaphp.org/documentation
+
+To build your own download: http://europaphp.org/download
