--- a/europa/app/lang/Index.ini
+++ b/europa/app/lang/Index.ini
@@ -1,3 +1,5 @@
+; Language file for app/views/Index.php
+
 title  = "EuropaPHP"
 time   = "Rendered in %s seconds"
 memory = "Using :megabytes megabytes of memory"
