Some more sketching of new architecture for 1.2.0.
There really is no such thing as an action now. There is a single controller class for a request. Views can extend other views, thus solving a layout issue without even forcing a layout/view architecture on someone.

Europa_Controller is now a more integral part of building controllers.

Performance is up nearly 100% above recent prototoypes.

--- a/sandbox/app/lang/AbstractView.ini
+++ b/sandbox/app/lang/AbstractView.ini
@@ -1,4 +1,4 @@
-; Language file for app/views/Index.php
+; Language file for app/views/AbstractView.php
 
 title  = "EuropaPHP"
 time   = "Rendered in %s seconds"
