--- a/sandbox/app/lang/ErrorView.ini
+++ b/sandbox/app/lang/ErrorView.ini
@@ -1,4 +1,4 @@
-; Language file for app/views/Error/notFound.php
+; Language file for app/views/ErrorView.php
 
 h1 = "Error: Not Found"
 h2 = "The page %s was unable to be found."
