--- a/sandbox/app/lang/IndexView.ini
+++ b/sandbox/app/lang/IndexView.ini
@@ -1,4 +1,4 @@
-; Language file for app/views/Index/index.php
+; Language file for app/views/IndexView.php
 
 h1 = "Thanks for choosing EuropaPHP"
 h2 = "You won't be sorry"
