Create a Europa_Controller_Action and Europa_Controller_Basic for different controller/action behavior.

--- a/sandbox/app/lang/IndexView.ini
+++ b/sandbox/app/lang/IndexView.ini
@@ -1,4 +1,5 @@
-; Language file for app/views/IndexView.php
+; Language file for app/views/AbstractView.php
 
-h1 = "Thanks for choosing EuropaPHP"
-h2 = "You won't be sorry"
+title  = "EuropaPHP"
+time   = "Rendered in %s seconds"
+memory = "Using :megabytes megabytes of memory"
