Update sandbox files to reflect changes to core API.

--- a/sandbox/app/lang/IndexView.ini
+++ b/sandbox/app/lang/IndexView.ini
@@ -1,5 +1,4 @@
-; Language file for app/views/AbstractView.php
+; Language file for app/views/IndexView.php
 
-title  = "EuropaPHP"
-time   = "Rendered in %s seconds"
-memory = "Using :megabytes megabytes of memory"
+h1 = "Thanks for choosing EuropaPHP"
+h2 = "You won't be sorry"
