--- a/app/langs/en-us/cli/help.ini
+++ b/app/langs/en-us/cli/help.ini
@@ -1,7 +1,7 @@
 arguments = "Arguments:"
 availableCommands = "Available Commands"
 availableCommandsUnderline = "------------------"
-howToDocument = "The help for each command is generated automatically. To update a command's documentation, updates its doc comments."
+howToDocument = "The help for each command is generated automatically. To update a command's documentation, update its doc comments."
 howToAuthor = "To add a new command, just add a new controller that extends the `RestController` and give it a `cli` method."
 seeAgain = "To see this message again:"
 seeHelp = "To see the help for a specific command:"
