Sync JSONP callback name. Make boot files accept a file or array of files. Update cli views.

--- a/app/langs/en-us/cli/help.ini
+++ b/app/langs/en-us/cli/help.ini
@@ -1,4 +1,4 @@
-arguments = "Arguments:"
+options = "Options:"
 availableCommands = "Available Commands"
 availableCommandsUnderline = "------------------"
 howToDocument = "The help for each command is generated automatically. To update a command's documentation, update its doc comments."
