--- a/app/demo/langs/en-us/web/layout.ini
+++ b/app/demo/langs/en-us/web/layout.ini
@@ -1,3 +1,3 @@
-title  = "EuropaPHP"
-time   = "Rendered in %s seconds"
-memory = "Using :megabytes megabytes of memory"
+heading = "EuropaPHP"
+tagline = "Rendered in %s seconds"
+brand   = "EuropaPHP"
